corrected z-index of content to provide a better layout

--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,6 @@ header {
 
 #main-nav {
   background-color: black;
-  height: 80px;
   padding: 10px 0 10px 10px;
   text-align: center;
 }
@@ -69,11 +68,12 @@ header {
   width: 120px;
   position: fixed;
   margin-left: 80%;
+  margin-bottom: 217px;
   border-left: grey solid;
   background-color: lightgrey;
   padding: 10px 20px 10px 0;
   height: 100%;
-  z-index: -1;
+  z-index: 0;
 }
 
 #sideNav a {
@@ -86,6 +86,8 @@ header {
 
 #articles {
   padding-right: 20%;
+  position: relative;
+  z-index: -100;
 }
 
 .offset:before {
@@ -125,7 +127,8 @@ abbr {
 footer {
   height: 207px;
   text-align: center;
-  z-index: 1;
+  position: relative;
+  z-index: 100;
   background-color: #fff;
   padding-top: 10px;
 }
